--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+
+studylab-main
+shapely.1.2.15.zip
+studylab-main.zip
+layout.jpeg
